<resources>
    <string name="app_name">GoLandCoDriver</string>
    <string name="title_activity_maps"></string>


    <!-- <Tool Bar>  -->

    <!-- Map Mode -->
    <string name="choose_map_mode">Выбрать стиль карты</string>
    <string name="map_mode_normal">По умолчанию</string>
    <string name="map_mode_satellite">Спутник</string>
    <string name="map_mode_hybrid">Спутник + Дороги</string>
    <string name="map_mode_terrain">Рельеф</string>

    <!-- Map Style -->
    <string name="map_style_day">Дневной режим</string>
    <string name="map_style_night">Ночной режим</string>

    <!-- Drawer Layout -->
    <string name="drawer_menu_open">Открыть меню</string>
    <string name="drawer_menu_close">Закрыть меню</string>

    <!-- AutoCompleteFragment -->
    <string name="search_hint">Искать..</string>

    <!-- </Tool Bar>  -->


    <!-- <Drawer> -->

    <!-- <Header> -->
    <string name="header_guest_email_text">Войдите или зарегистрируйтесь</string>
    <!-- </Header> -->

    <!-- <Menu> -->
    <string name="login_drawer">Аккаунт</string>
    <string name="user_login_in">Вход</string>
    <string name="user_sign_up">Регистрация</string>
    <string name="user_login_out">Выход</string>
    <!-- </Menu> -->
    <!-- </Drawer> -->
</resources>