<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/item_map_style"
        android:title="@string/map_style_day"
        android:icon="@drawable/ic_map_style_day"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_map_mode"
        android:title="@string/choose_map_mode"
        android:icon="@drawable/ic_map_mode_day"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/normal_map"
                android:title="@string/map_mode_normal"
                app:showAsAction="never"/>

            <item
                android:id="@+id/hybrid_map"
                android:title="@string/map_mode_hybrid"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/satellite_map"
                android:title="@string/map_mode_satellite"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/terrain_map"
                android:title="@string/map_mode_terrain"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>